--- a/index.html
+++ b/index.html
@@ -315,6 +315,7 @@
       </div>
     </footer>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="/index.js"></script>
     <script>
       $(function () {
         var cdSlider = $(".testimonials"),
@@ -492,6 +493,5 @@
             });
         }
       </script>
-      <script src="/public/index.js"></script>
   </body>
 </html>
