link corrected and error removed ( cam't set prop of null)

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
           Web Developer, Java &amp; Python Programmer
         </p>
         <div class="links">
-          <a href="https://www.facebook.com/aditya.gaur.96/"><i class="fab fa-facebook-f"></i></a>
-          <a href="mailto:adityag200@outlook.com"><i class="material-icons">mail_outline</i></a>
-          <a href="https://www.linkedin.com/in/aditya-gaur-983584166/"><i class="fab fa-linkedin-in"></i></a>
+          <a href="https://www.facebook.com/ShubhamSharma.inn"><i class="fab fa-facebook-f"></i></a>
+          <a href="mailto:shubham5.logistics@gmail.com"><i class="material-icons">mail_outline</i></a>
+          <a href="https://www.linkedin.com/in/shubham-sharma-a31b4520b/"><i class="fab fa-linkedin-in"></i></a>
         </div>
         <a href="#work"
           ><i style="font-size: 35px;" class="fas fa-chevron-circle-down"></i
@@ -136,7 +136,7 @@
               I am a hardworking and ambitious individual with a great passion for any kind of work I am assigned.I have excellent communication skills, enabling me to effectively communicate with a wide range of people.I'm a passionate learner and obsessive seeker of all things related to computers, computing and developing.
             </p>
             <button style="font-size: 18px; padding: 5px 10px;">
-             <a href=https://drive.google.com/file/d/1Vz8yB1Q_l7jAx_L1ldqf60r_Q0mHOI1f/view?usp=sharing download>Download Resume</a>
+             <a href=https://drive.google.com/file/d/1v70K2naJxwyz33jXiHJ_YFLFDoom7naA/view?usp=sharing download>Download Resume</a>
             </button>
           </div>
           <div class="col-md-6 col-12 mt-md-0 mt-5" id="about_right">
@@ -272,9 +272,9 @@
           <div class="text-center text-md-left">
               <span class="sub-btn"><a class="btn btn-primary" onclick="validateForm();">Send</a></span>
               <span class="contact-link">
-                <a href="https://www.facebook.com/aditya.gaur.96/"><i class="fa fa-facebook-official footer1" style="font-size:24px"></i></a>
-          <a href="mailto:adityag200@outlook.com"><i class="material-icons footer1">mail_outline</i></a>
-          <a href="https://www.linkedin.com/in/aditya-gaur-983584166/"><i class="fa fa-linkedin footer1" style="font-size:24px"></i></a>
+                  <a href="https://github.com/Shubham-log"><i class="fab fa-github footer1" style="font-size:24px"></i></a>
+                  <a href="mailto:shubham5.logistics@gmail.com"><i class="material-icons footer1">mail_outline</i></a>
+                   <a href="https://www.linkedin.com/in/shubham-sharma-a31b4520b/"><i class="fa fa-linkedin footer1" style="font-size:24px"></i></a>
               </span>
           </div>
           <div class="status"></div>
@@ -415,9 +415,9 @@
       const emailerror = document.getElementById("emailerror");
       const messageerror = document.getElementById("messageerror");
       var regex = /^[a-zA-Z ]{2,30}$/;
-      nameerror.innerText = "";
-      emailerror.innerText = "";
-      messageerror.innerText = "";
+      // nameerror.innerText = "";
+      // emailerror.innerText = "";
+      // messageerror.innerText = "";
       form.addEventListener("submit", (e) => {
         if (name.value === "" || name.value == null) {
           namemsg = "Name is required.";
